--- a/firefox-addon/package.json
+++ b/firefox-addon/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "A basic add-on",
   "main": "index.js",
-  "author": "Daham  Pathiraja",
+  "author": "Helani",
   "engines": {
     "firefox": ">=38.0a1",
     "fennec": ">=38.0a1"
